--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     grid-template-areas: "nav nav" "aside main";
   }
   .grid-areas-sm {
-    grid-template-rows: 100px 1fr;
+    /* grid-template-rows: 100px 1fr; */
     grid-template-areas: "nav" "main";
   }
   .main {
