--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@
 @layer utilities {
   .grid-areas-lg {
     grid-template-columns: 200px 1fr;
-    grid-template-areas: "nav nav" "aside main";
+    grid-template-areas: "aside main";
   }
   .grid-areas-sm {
     /* grid-template-rows: 100px 1fr; */
-    grid-template-areas: "nav" "main";
+    grid-template-areas: "main";
   }
   .main {
     grid-area: main;
